--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,20 @@
+:root {
+    --color-green: #31c48d;
+    --color-white: #ffffff;
+    --color-dark-grey: #33333d;
+    --color-medium-grey: #424250;
+    --color-light-grey: #d2d6dc;
+    
+}
+
 *{
     box-sizing: border-box;
 }
 
 body{
     margin: 0;
-    background-color: brown;
+    background-color: var(--color-medium-grey); 
+    color: var(--color-white);
+    font-family: Roboto, Arial, Helvetica, sans-serif;
 }
+
