--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,18 +3,63 @@
     --color-white: #ffffff;
     --color-dark-grey: #33333d;
     --color-medium-grey: #424250;
-    --color-light-grey: #d2d6dc;
-    
+    --color-light-grey: #d2d6dc; 
 }
 
 *{
     box-sizing: border-box;
 }
 
-body{
+body {
     margin: 0;
     background-color: var(--color-medium-grey); 
     color: var(--color-white);
     font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
+/* header */
+
+.header {
+    text-align: center;
+}
+
+/* controls */
+
+.controls {
+    background: yellow;
+}
+
+/* counter */
+
+.counter {
+    background: var(--color-dark-grey);
+}
+
+.counter_value {
+    width: 100%;
+    height: 15rem;
+    text-align: center;
+    font-size: 6rem;
+    font-weight: 900;
+    background: none;
+    color: var(--color-white);
+    border-width: 0;
+    border-bottom: 1px solid var(--color-light-grey);
+}
+
+.counter_actions {
+     display: flex;
+}
+
+.counter_button {
+    background: none;
+    width: 50%;
+    border-width: 0;
+    color: var(--color-light-grey);
+    font-size: 3rem;
+    height: 10rem;
+}
+
+.counter_button_first {
+    border-right: 1px solid var(--color-light-grey);
+}
