--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,12 +2,16 @@
     --color-green: #31c48d;
     --color-white: #ffffff;
     --color-dark-grey: #33333d;
-    --color-medium-grey: #424250;
-    --color-light-grey: #d2d6dc; 
+    --color-medium-grey: #303038;
+    --color-light-grey: #9ca3ae; 
 }
 
 *{
     box-sizing: border-box;
+}
+
+html {
+    height: 100vh;
 }
 
 body {
@@ -15,12 +19,23 @@ body {
     background-color: var(--color-medium-grey); 
     color: var(--color-white);
     font-family: Roboto, Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 /* header */
 
 .header {
     text-align: center;
+}
+
+.header_title {
+    font-size: 3rem;
+    font-weight: 900;
+    color: var(--color-light-grey);
+
 }
 
 /* controls */
@@ -58,8 +73,31 @@ body {
     color: var(--color-light-grey);
     font-size: 3rem;
     height: 10rem;
+    border-bottom: 1px solid var(--color-light-grey);
+    transition: transform 0.3s;
+    transform: translateY(0);
+}
+
+.counter_button:active {
+    background: var(--color-medium-grey);
+    transform: translateY(2%);
 }
 
 .counter_button_first {
     border-right: 1px solid var(--color-light-grey);
+}
+
+/* footer */
+
+.footer {
+    background: var(--color-dark-grey);
+    color: var(--color-light-grey);
+    padding: 2rem;
+    font-size: 0.8rem;
+    text-align: center;
+    
+}
+
+.footer_link {
+    color: var(--color-white)
 }
