--- a/IWA1/stylesheet.css
+++ b/IWA1/stylesheet.css
@@ -70,12 +70,16 @@ body {
     background: none;
     width: 50%;
     border-width: 0;
-    color: var(--color-light-grey);
+    color: var(--color-white);
     font-size: 3rem;
     height: 10rem;
     border-bottom: 1px solid var(--color-light-grey);
     transition: transform 0.3s;
     transform: translateY(0);
+}
+
+.counter_button:disabled{
+    opacity: 0.2;
 }
 
 .counter_button:active {
